Sync all content

--- a/content/pages/lecture-and-studio-notes/wk01.md
+++ b/content/pages/lecture-and-studio-notes/wk01.md
@@ -76,7 +76,7 @@ Our first featured presentation will emphasize some of the "biology" that's ofte
 
 *   The [2008 iGEM team from Heidelberg](http://2008.igem.org/Team:Heidelberg) describing a genetically-engineered bacteria that will find, and kill pathogenic bacteria
     *   presentation video ([MPEG4 - 100MB](http://2008.igem.org/files/video/Heidelberg.mp4))
-    *   presentation slides (![This resource may not render correctly in a screen reader.](/images/inacessible.gif)[PDF - 16.8MB](http://2008.igem.org/files/presentation/Heidelberg.pdf))
+    *   presentation slides ([PDF - 16.8MB](http://2008.igem.org/files/presentation/Heidelberg.pdf))
 
 In watching their project we can focus on
 
